--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,38 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="159"
+    android:viewportHeight="177">
+  <group android:scaleX="0.34135592"
+      android:scaleY="0.38"
+      android:translateX="52.3622"
+      android:translateY="54.87">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
+        android:pathData="M34.56,3C-16.73,52.91 -5.68,102.82 69.03,67.33C143.74,31.84 70.43,96.65 51.19,115.02C23.31,141.63 58.99,166.03 85.75,137.2C112.51,108.36 92.44,92.84 71.26,125C52.39,153.65 93.56,182.67 156,171.58"
+        android:strokeWidth="6"
+        android:fillColor="#00000000"
+        android:strokeColor="#000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M83.5,114C83.5,114 89.43,107.47 94.5,110C98.95,112.22 94,122.5 94,122.5"
+        android:strokeWidth="2"
+        android:fillColor="#00000000"
+        android:strokeColor="#7C7C7C"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M81.5,64C81.5,64 93.5,58 99,59C103,59.73 90.5,73.5 90.5,73.5"
+        android:strokeWidth="2"
+        android:fillColor="#00000000"
+        android:strokeColor="#7C7C7C"
+        android:strokeLineCap="round"/>
+    <path
         android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M81.5,64.5C81.5,64.5 93,58.5 98.5,59.5C102.5,60.23 90,73 90,73"
+        android:fillColor="#00000000"
+        android:strokeColor="#4D4D4D"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M45.88,126.98C46.14,126.5 45.97,125.89 45.48,125.62C45,125.36 44.39,125.54 44.12,126.02L45,126.5L45.88,126.98ZM47,143.5L46.32,144.23L47,143.5ZM45,126.5C44.12,126.02 44.12,126.02 44.12,126.02C44.12,126.02 44.12,126.02 44.12,126.02C44.12,126.02 44.12,126.02 44.12,126.03C44.12,126.03 44.12,126.03 44.12,126.03C44.11,126.04 44.11,126.05 44.1,126.06C44.09,126.08 44.07,126.12 44.05,126.16C44.01,126.24 43.95,126.36 43.87,126.52C43.73,126.82 43.53,127.27 43.32,127.82C42.91,128.92 42.43,130.46 42.2,132.25C41.73,135.83 42.26,140.44 46.32,144.23L47,143.5L47.68,142.77C44.24,139.56 43.77,135.67 44.18,132.5C44.39,130.91 44.82,129.52 45.19,128.53C45.38,128.03 45.56,127.64 45.68,127.37C45.75,127.24 45.8,127.14 45.83,127.07C45.85,127.04 45.86,127.01 45.87,127C45.87,126.99 45.88,126.98 45.88,126.98C45.88,126.98 45.88,126.98 45.88,126.98C45.88,126.98 45.88,126.98 45.88,126.98C45.88,126.98 45.88,126.98 45.88,126.98C45.88,126.98 45.88,126.98 45,126.5ZM47,143.5L46.32,144.23C50.31,147.96 55.1,148.87 58.81,148.87C60.67,148.87 62.29,148.65 63.44,148.42C64.01,148.3 64.48,148.19 64.8,148.1C64.96,148.06 65.08,148.02 65.17,147.99C65.22,147.98 65.25,147.97 65.27,147.96C65.29,147.96 65.3,147.96 65.3,147.95C65.31,147.95 65.31,147.95 65.31,147.95C65.31,147.95 65.31,147.95 65.31,147.95C65.32,147.95 65.32,147.95 65.32,147.95C65.32,147.95 65.32,147.95 65,147C64.69,146.05 64.69,146.05 64.69,146.05C64.69,146.05 64.69,146.05 64.69,146.05C64.69,146.05 64.69,146.05 64.69,146.05C64.69,146.05 64.69,146.05 64.68,146.05C64.68,146.05 64.68,146.05 64.67,146.06C64.65,146.06 64.63,146.07 64.59,146.08C64.52,146.1 64.41,146.13 64.27,146.17C63.99,146.25 63.58,146.35 63.05,146.46C62,146.67 60.52,146.88 58.81,146.88C55.41,146.88 51.19,146.04 47.68,142.77L47,143.5Z"
+        android:fillColor="#7C7C7C"/>
+  </group>
 </vector>
